--- a/resume.html
+++ b/resume.html
@@ -29,9 +29,7 @@
             </div>
             <nav class="main-nav">
                 <a href="#" class="nav-link active">Home</a>
-                <a href="#skills" class="nav-link">Skills</a>
-                <a href="#portfolio" class="nav-link">Portfolio</a>
-                <a href="#blogs" class="nav-link">Blogs</a>
+                <a href="#skills" class="nav-link">My Experience</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </nav>
             <button class="btn btn-outline">
@@ -161,125 +159,9 @@
             </div>
         </section>
 
-        <!-- Portfolio Section -->
-        <section id="portfolio" class="portfolio container">
-            <div class="section-header">
-                <div class="badge">Portfolio</div>
-                <h2 class="section-title">My Creative Works Latest Projects</h2>
-                <p class="section-text">
-                    I have selected and mentioned here some of my latest projects to share with you.
-                </p>
-            </div>
 
-            <div class="view-all-btn">
-                <button class="btn btn-primary">View all Projects</button>
-            </div>
 
-            <div class="portfolio-grid">
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="vibrant-jobfair-landing.png" alt="Project 1">
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Jobfair</h3>
-                        <p class="project-text">Landing Page For local startup company</p>
-                        <div class="project-buttons">
-                            <button class="btn btn-primary btn-sm">Details</button>
-                            <button class="btn btn-outline btn-sm">
-                                Source code
-                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="icon">
-                                    <line x1="5" y1="12" x2="19" y2="12"></line>
-                                    <polyline points="12 5 19 12 12 19"></polyline>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="clean-tutorial-layout.png" alt="Project 2">
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">I will follow your tutorial</h3>
-                        <p class="project-text">Just a demo text</p>
-                        <div class="project-buttons">
-                            <button class="btn btn-primary btn-sm">Details</button>
-                            <button class="btn btn-outline btn-sm">
-                                Source code
-                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="icon">
-                                    <line x1="5" y1="12" x2="19" y2="12"></line>
-                                    <polyline points="12 5 19 12 12 19"></polyline>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="vibrant-website-test.png" alt="Project 3">
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">testing</h3>
-                        <p class="project-text">Just a demo text</p>
-                        <div class="project-buttons">
-                            <button class="btn btn-primary btn-sm">Details</button>
-                            <button class="btn btn-outline btn-sm">
-                                Source code
-                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="icon">
-                                    <line x1="5" y1="12" x2="19" y2="12"></line>
-                                    <polyline points="12 5 19 12 12 19"></polyline>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Blog Section -->
-        <section id="blogs" class="blogs container">
-            <div class="section-header">
-                <div class="badge">Blogs</div>
-                <h2 class="section-title">My latest articles</h2>
-                <p class="section-text">
-                    I have selected and mentioned here some of my latest blogs to share with you.
-                </p>
-            </div>
-
-            <div class="blogs-grid">
-                <div class="blog-card">
-                    <div class="blog-image">
-                        <img src="shadowed-knight.png" alt="Blog 1">
-                    </div>
-                    <div class="blog-content">
-                        <h3 class="blog-title">Trying to give it a good title</h3>
-                        <p class="blog-text">this is a long article</p>
-                    </div>
-                </div>
-
-                <div class="blog-card">
-                    <div class="blog-image">
-                        <img src="anime-straw-hat.jpg" alt="Blog 2">
-                    </div>
-                    <div class="blog-content">
-                        <h3 class="blog-title">asdfasdfasdfasdf</h3>
-                        <p class="blog-text">asdfasdfasdf</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="view-all-btn">
-                <button class="btn btn-primary">View All</button>
-            </div>
-        </section>
 
         <!-- Contact Section -->
         <section id="contact" class="contact container">
