--- a/resume.html
+++ b/resume.html
@@ -176,7 +176,7 @@
             <div class="contact-form-container">
                 <form class="contact-form">
                     <div class="form-grid">
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <input type="text" placeholder="Full Name" class="form-control">
                         </div>
                         <div class="form-group">
@@ -187,7 +187,7 @@
                         </div>
                         <div class="form-group">
                             <input type="text" placeholder="Budget" class="form-control">
-                        </div>
+                        </div>-->
                         <div class="form-group full-width">
                             <textarea placeholder="Description" rows="6" class="form-control"></textarea>
                         </div>
