--- a/resume.html
+++ b/resume.html
@@ -250,7 +250,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="copyright">© 2022, All Rights Reserved</div>
-                <div class="designer">Designed by Tahir Ahmed</div>
+                <div class="designer">Designed by kamran</div>
                 <div class="social-links">
                     <a href="#" class="social-link">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
