--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-frame">
-                    <img src="curly-haired-smile.png" alt="Designer portrait">
+                    <img src="denis.png" alt="Designer portrait">
                 </div>
             </div>
         </section>
