--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <td class="level-number">Level 2</td>
                     <td>
                         <a class="level-option" href="#" onclick="selectLevel(2)">
-                            Skillset: Professional Learner
+                            What I bring to the table:<br>
                         </a>
                     </td>
                 </tr>
