--- a/video3.html
+++ b/video3.html
@@ -211,7 +211,7 @@
             // Add Johann character on the right side (25% from right edge)
             const johann = document.createElement("img");
             johann.id = "johann-character";
-            johann.src = "assets/denis/NavySuit.png";
+            johann.src = "assets/denis/ElegentSecondCharacterStand.png";
             johann.style.position = "absolute";
             johann.style.bottom = bottomPosition;
             johann.style.right = "25%";
