--- a/resume.html
+++ b/resume.html
@@ -24,8 +24,8 @@
         <!-- Header -->
         <header class="container">
             <div class="logo">
-                <span class="logo-m">M</span>
-                <span class="logo-text">Design</span>
+                <span class="logo-m"></span>
+                <span class="logo-text"></span>
             </div>
             <nav class="main-nav">
                 <a href="#" class="nav-link active">Home</a>
@@ -56,8 +56,7 @@
             <div class="hero-content">
                 <div class="badge">Welcome</div>
                 <h1 class="hero-title">
-                    I have <span class="text-green">Creative</span><br>
-                    <span class="text-green">Design</span> Experience
+                    <span class="text-green">Denis Tezerdi</span>
                 </h1>
                 <p class="hero-text">
                     I specialize in UI/UX design. I've spent the last 2 years helping businesses to solve their problems
