--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
         </section>
 
         <!-- Stats Section -->
-        <section class="stats container">
+        <!--<section class="stats container">
             <div class="stat-item">
                 <h2 class="stat-number">80+</h2>
                 <p class="stat-text">Satisfied clients</p>
@@ -96,10 +96,10 @@
                 <h2 class="stat-number">99+</h2>
                 <p class="stat-text">Reviews given</p>
             </div>
-        </section>
+        </section>-->
 
         <!-- Skills Section -->
-        <section id="skills" class="skills container">
+        <!-- <section id="skills" class="skills container">
             <div class="section-header">
                 <div class="badge">My Skills</div>
                 <h2 class="section-title">Why Hire Me For Your Next Project?</h2>
@@ -156,8 +156,79 @@
                     <p class="skill-text">Create interactive design with high-fidelity</p>
                 </div>
             </div>
-        </section>
+        </section>-->
+        <!-- Timeline Section -->
+        <section class="timeline container">
+            <div class="section-header">
+                <div class="badge">My Experience</div>
+                <p class="section-text">
+                    My professional journey and experience over the years
+                </p>
+            </div>
 
+            <div class="timeline-container">
+                <div class="timeline-line"></div>
+
+                <!-- Timeline Item 1 -->
+                <div class="timeline-item left">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="timeline-date">2020 - Present</div>
+                        <h3 class="timeline-title">UI/UX Designer</h3>
+                        <div class="timeline-company">Creative Agency</div>
+                        <p class="timeline-description">
+                            Lead UI/UX designer for various client projects. Created user-centered designs and improved
+                            user
+                            experiences across multiple platforms.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Timeline Item 2 -->
+                <div class="timeline-item right">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="timeline-date">2018 - 2020</div>
+                        <h3 class="timeline-title">Web Designer</h3>
+                        <div class="timeline-company">Design Studio</div>
+                        <p class="timeline-description">
+                            Designed responsive websites and implemented modern UI patterns. Collaborated with
+                            development teams
+                            to ensure design integrity.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Timeline Item 3 -->
+                <div class="timeline-item left">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="timeline-date">2016 - 2018</div>
+                        <h3 class="timeline-title">Graphic Designer</h3>
+                        <div class="timeline-company">Marketing Agency</div>
+                        <p class="timeline-description">
+                            Created visual concepts for marketing campaigns. Designed logos, brochures, and social media
+                            graphics for various clients.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Timeline Item 4 -->
+                <div class="timeline-item right">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="timeline-date">2014 - 2016</div>
+                        <h3 class="timeline-title">Junior Designer</h3>
+                        <div class="timeline-company">Tech Startup</div>
+                        <p class="timeline-description">
+                            Assisted senior designers with various projects. Gained experience in UI design, branding,
+                            and
+                            digital marketing materials.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
