--- a/resume.html
+++ b/resume.html
@@ -317,7 +317,7 @@
         </section>
 
         <!-- Footer -->
-        <footer class="footer">
+        <!--<footer class="footer">
             <div class="container">
                 <div class="copyright">© 2022, All Rights Reserved</div>
                 <div class="designer">Designed by kamran</div>
@@ -346,7 +346,7 @@
                     </a>
                 </div>
             </div>
-        </footer>
+        </footer>-->
     </div>
 
     <script>
