--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <tr>
                     <td></td>
                     <td>
-                        <a id="go-back" class="level-option" href="#" onclick="goBackMainMenu()">Go back</a>
+                        <a id="go-back" class="level-option" href="#" onclick="goBackMainMenu()">Go to Resume</a>
                     </td>
                 </tr>
             </table>
