--- a/video3.html
+++ b/video3.html
@@ -215,7 +215,7 @@
             johann.style.position = "absolute";
             johann.style.bottom = bottomPosition;
             johann.style.right = "25%";
-            johann.style.transform = "translateX(50%)";
+            johann.style.transform = "translateX(50%) scaleX(-1)";
             johann.style.width = "100px";
             johann.style.height = "auto";
             johann.style.zIndex = "1001";
