--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The IDDP Saga win Denis Tezerdi</title>
+    <title>The IDDP Saga Denis Tezerdi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,7 +14,7 @@
         <div class="menu-content">
             <div class="header-section">
                 <h1 id="main-title">The IDDP Saga:</h1>
-                <h2 class="author">Win Denis Tezerdi</h2>
+                <h2 class="author">Denis Tezerdi</h2>
                 <div class="separator"></div>
                 <div class="levels-title">Levels overview</div>
             </div>
