--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <td class="level-number">Level 3</td>
                     <td>
                         <a class="level-option" href="#" onclick="selectLevel(3)">
-                            IDDP:<br>
-                            It's Definitely Denis' Path
+                            My Way to IDDP
                         </a>
                     </td>
                 </tr>
