--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <td class="level-number">Level 3</td>
                     <td>
                         <a class="level-option" href="#" onclick="selectLevel(3)">
-                            My Way to IDDP
+                            My way to IDDP
                         </a>
                     </td>
                 </tr>
