--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
     <div id="game-menu" class="bg hidden">
         <div class="commerzbank-logo"></div>
 
+        <!-- Update the controls panel structure -->
+        <div class="controls-panel">
+            <h3>Game Controls</h3>
+
+            <!-- Movement controls with separate keys -->
+            <div class="control-item">
+                <div class="key-container">
+                    <div class="key arrow-key">←</div>
+                    <span class="key-label">Move Left</span>
+                </div>
+            </div>
+
+            <div class="control-item">
+                <div class="key-container">
+                    <div class="key arrow-key">→</div>
+                    <span class="key-label">Move Right</span>
+                </div>
+            </div>
+
+            <div class="control-item">
+                <div class="key-container">
+                    <div class="key arrow-key">↑</div>
+                    <span class="key-label">Jump</span>
+                </div>
+            </div>
+
+            <div class="control-item">
+                <div class="key-container">
+                    <div class="key space-key">Space</div>
+                    <span class="key-label">Jump</span>
+                </div>
+            </div>
+        </div>
+
         <div class="menu-content">
             <div class="header-section">
                 <h1 id="main-title">The IDDP Saga:</h1>
